@@ -51,6 +51,8 @@
           Reeder).
 - TW-1626 Wrong wait date (thanks to Andrea Rizzi).
 - TW-1632 Japanese translation for Taskwarrior(150713) (thanks to ribbon).
+- TW-1634 due.not:<date> excludes only tasks scheduled at mitnight (thanks to
+          Tomas Babej).
 - Prevent potential task duplication during import for non-pending tasks.
 - Show the active context in "context list", if any is active.
 - Fix "task edit" dropping annotation text after newlines.
